--- a/1.html
+++ b/1.html
@@ -20,11 +20,11 @@
             .box div {
             float: left;
 			
-            width: 31vw;
-            height: 31vw;
-            margin: 0.3%;
+            width: 32%;
+            padding-top: 32%;
+            margin: 0.666%;
             background-color: orange;
-            border-radius: 3%;
+            border-radius: 5%;
              }
 			
 			
